# mini_fec

./: CMakeLists.txt  channel.cpp  channel.h  codeword.cpp  codeword.h  decoder.cpp  decoder.h  detail.cpp  detail.h  encoder.cpp  encoder.h  main.cpp
